<resources>
    <string name="app_name">咻咻</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="remember_no">记住账号</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="third_login">第三方登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="weichat_login">微信登录</string>
    <string name="sinaweibo_login">微博登录</string>

    <string name="phone_no">手机号</string>
    <string name="check_no">验证码</string>
    <string name="password_agian_no">确认密码</string>
    <string name="send">发送</string>
    <string name="register">注册</string>

    <!--注册页面提示字符-->
    <string name="phone_num_no_empty">手机号不能为空</string>
    <string name="phone_num_no_legal">手机号不合法</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <!--主页四大栏目标题-->
    <string name="main_talk">聊天</string>
    <string name="main_look">新闻</string>
    <string name="main_vd">看点</string>
    <string name="main_me">我</string>

</resources>
