<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/retangle_c10_solid_white_shape"
    >

    <RadioButton
        android:id="@+id/talking"
        style="@style/AppBottomStyle"
        android:drawableTop="@drawable/drawable_select_talking"
        android:checked="true"
        android:text="@string/main_talk" />

    <RadioButton
        android:id="@+id/looking"
        style="@style/AppBottomStyle"
        android:drawableTop="@drawable/drawable_select_looking"
        android:text="@string/main_look" />

    <RadioButton
        android:id="@+id/smallVD"
        style="@style/AppBottomStyle"
        android:drawableTop="@drawable/drawable_select_video"
        android:text="@string/main_vd" />

    <RadioButton
        android:id="@+id/me"
        style="@style/AppBottomStyle"
        android:drawableTop="@drawable/drawable_select_me"
        android:text="@string/main_me" />
</RadioGroup>