<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".c.activity.MainActivity"
        >

        <!--沉浸式状态栏-->
        <!--布局加入:-->
        <!--android:fitsSystemWindows="true"-->
        <!--android:clipToPadding="true"-->


        <!--标题栏-->
        <include layout="@layout/activity_title"/>

        <!--使用fragment时一定要把那么属性设置上，不然会报错-->
        <!--<fragment-->
        <!--android:id="@+id/fragment"-->
        <!--android:name="com.example.pc120.myapplication.c.fragment.TalkingFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--/>-->


        <!--内容-->
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >


        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#55000000"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <RadioButton
                android:id="@+id/talking"
                style="@style/AppBottomStyle"
                android:drawableTop="@drawable/drawable_select_talking"
                android:checked="true"
                android:text="@string/main_talk" />

            <RadioButton
                android:id="@+id/looking"
                style="@style/AppBottomStyle"
                android:drawableTop="@drawable/drawable_select_looking"
                android:text="@string/main_look" />

            <RadioButton
                android:id="@+id/smallVD"
                style="@style/AppBottomStyle"
                android:drawableTop="@drawable/drawable_select_video"
                android:text="@string/main_vd" />

            <RadioButton
                android:id="@+id/me"
                style="@style/AppBottomStyle"
                android:drawableTop="@drawable/drawable_select_me"
                android:text="@string/main_me" />
        </RadioGroup>


    </LinearLayout>

    <!-- 侧边菜单-->
    <!--<FrameLayout-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:layout_gravity="start"/>-->

    <!-- 侧边菜单-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer"/>

</android.support.v4.widget.DrawerLayout>
